// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIRolloverCheckbox allows for a user defined rollover component to be passed 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className={null}
    >
      <div
        id="rolloverComponent"
      />
    </div>
    <label
      className="xui-rollovercheckbox-hidden xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox displays the checkbox when it's set to be shown 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox doesn't display the checkbox when it's set to hidden 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className={null}
    >
      <div />
    </div>
    <label
      className="xui-rollovercheckbox-hidden xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox include an automation-id 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid="test-rollovercheckbox"
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    />
    <label
      className="xui-styledcheckboxradio"
      data-automationid="test-rollovercheckbox--checkbox"
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid="test-rollovercheckbox--checkbox--input"
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid="test-rollovercheckbox--checkbox--checkbox"
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox includes an aria-label, when provided 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label="Test label"
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders a variety of sizes will be a large size when passed in the size prop 1`] = `
<div
  className="xui-rollovercheckbox--target xui-rollovercheckbox-large"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders a variety of sizes will be a small size when passed in the size prop 1`] = `
<div
  className="xui-rollovercheckbox--target xui-rollovercheckbox-small"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders a variety of sizes will be a xlarge size when passed in the size prop 1`] = `
<div
  className="xui-rollovercheckbox--target xui-rollovercheckbox-xlarge"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders a variety of sizes will be display the standard size when medium is set on the size prop. 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders an id on the root node when passed 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id="test-id"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders checked when specified 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        checked={true}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders correctly 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    />
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox renders unchecked when specified 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        checked={false}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox should render the disabled classes and a disabled checkbox when isDisabled prop is true 1`] = `
<div
  className="xui-rollovercheckbox--target xui-rollovercheckbox--target-disabled"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio xui-styledcheckboxradio-is-disabled"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={true}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox shouldn't render the disabled classes and a disabled checkbox by default 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;

exports[`XUIRolloverCheckbox shouldn't render the disabled classes or a disabled checkbox when isDisabled prop is false 1`] = `
<div
  className="xui-rollovercheckbox--target"
  data-automationid={undefined}
  id={undefined}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="presentation"
>
  <div
    className="xui-rollovercheckbox"
  >
    <div
      className="xui-rollovercheckbox-hidden"
    >
      <div />
    </div>
    <label
      className="xui-styledcheckboxradio"
      data-automationid={undefined}
      onClick={[Function]}
      onKeyDown={undefined}
      role="presentation"
    >
      <input
        aria-describedby={undefined}
        aria-invalid={undefined}
        aria-label={undefined}
        aria-labelledby={undefined}
        className="xui-styledcheckboxradio--input"
        data-automationid={undefined}
        defaultChecked={false}
        disabled={false}
        name={undefined}
        onChange={[Function]}
        onClick={[Function]}
        required={false}
        tabIndex={0}
        type="checkbox"
        value={undefined}
      />
      <div
        className="xui-styledcheckboxradio--checkbox xui-rollovercheckbox--checkbox"
        data-automationid={undefined}
      />
    </label>
  </div>
</div>
`;
